--- a/lularizer-wireframe/audit.html
+++ b/lularizer-wireframe/audit.html
@@ -29,7 +29,7 @@ h3 {
 
 <header class="mdl-layout__header">
 <div class="mdl-layout__header-row">
-<span class="mdl-layout__title"><a href="/lularizer-wireframe/">Audit Inventory</a></span>
+<span class="mdl-layout__title">Audit Inventory</span>
 </div>
 </header>
 
