--- a/lularizer-wireframe/collection.html
+++ b/lularizer-wireframe/collection.html
@@ -23,7 +23,7 @@ h3 {
 
 <header class="mdl-layout__header">
 <div class="mdl-layout__header-row">
-<span class="mdl-layout__title"><a href="/lularizer-wireframe/">Add To Inventory</a></span>
+<span class="mdl-layout__title">Add From Photo Library</span>
 </div>
 </header>
 
