--- a/lularizer-wireframe/inventory.html
+++ b/lularizer-wireframe/inventory.html
@@ -65,8 +65,8 @@ h3 {
     <button class="mdl-button" id="moveCurrent" disabled="disabled">Restore to Current</button>
 
     <button class="mdl-button" id="moveDeletedCurrent" disabled="disabled">Restore to Current</button>
-    <button class="mdl-button" id="cleanUpAll">Clean Up All</button>
-    <button class="mdl-button" id="cleanUpSelected">Clean Up Selected</button>
+    <button class="mdl-button" id="cleanUpAll">Empty All</button>
+    <button class="mdl-button" id="cleanUpSelected">Empty</button>
 </footer>
 
 <script src="main.js"></script>
