--- a/lularizer-wireframe/index.html
+++ b/lularizer-wireframe/index.html
@@ -15,7 +15,7 @@
 
 <header class="mdl-layout__header">
 <div class="mdl-layout__header-row">
-<span class="mdl-layout__title"><a href="/lularizer-wireframe/">LuLaRizer</a></span>
+<span class="mdl-layout__title">LuLaRizer</span>
 </div>
 </header>
 
