--- a/lularizer-wireframe/new.html
+++ b/lularizer-wireframe/new.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="manifest" href="manifest.json">
 <title>False Camera</title>
 <link rel="stylesheet" type="text/css" href="main.css">
 <style>
