--- a/lularizer-wireframe/upload.html
+++ b/lularizer-wireframe/upload.html
@@ -5,22 +5,9 @@
 <title>Upload</title>
 <link rel="stylesheet" href="mdl/material.lime-pink.min.css">
 <script src="mdl/material.min.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" type="text/css" href="mdl/mdl-custom.css">
-<style>
-#inventory img {width: 90px; margin: 4px; }
-h3 {
-    font-family: steelfish;
-    text-transform: capitalize;
-}
-.selected {
-    box-shadow: 2px 2px 8px black;
-    position: relative;
-    top: -1px; left: -1px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="mdl/main.css">
 
-<body>
+<body id="upload">
 
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 
@@ -31,13 +18,13 @@ h3 {
 </header>
 
 <div class="mdl-layout__drawer">
-<span class="mdl-layout__title">LuLaRizer</span>
+<span class="mdl-layout__title"><a href="./">LuLaRizer</a></span>
 <nav class="mdl-navigation">
-<a class="mdl-navigation__link" href="#new" id="navNew">Add From Camera</a>
-<a class="mdl-navigation__link" href="#collection" id="navCollection">Add From Collection</a>
-<a class="mdl-navigation__link" href="#inventory" id="navInventory">Manage Inventory</a>
-<a class="mdl-navigation__link" href="#audit" id="navAudit">Inventory Audit</a>
-<a class="mdl-navigation__link" href="#upload" id="navUpload">Upload to Facebook</a>
+<a class="mdl-navigation__link" href="new" id="navNew">Add From Camera</a>
+<a class="mdl-navigation__link" href="collection" id="navCollection">Add From Collection</a>
+<a class="mdl-navigation__link" href="inventory" id="navInventory">Manage Inventory</a>
+<a class="mdl-navigation__link" href="audit" id="navAudit">Inventory Audit</a>
+<a class="mdl-navigation__link" href="upload" id="navUpload">Upload to Facebook</a>
 </nav>
 </div>
 
@@ -46,7 +33,7 @@ h3 {
 </div>
 
 <footer>
-    <button class="mdl-button" id="upload" disabled="disabled">Upload Selected</button>
+    <button class="mdl-button" id="uploadSelected" disabled="disabled">Upload Selected</button>
 </footer>
 
 <script src="main.js"></script>
@@ -82,7 +69,7 @@ function oneSelected() {
 
 function selectPhoto(e) {
     var targ = getEventTarget(e),
-        editButton = document.getElementById('upload');
+        editButton = document.getElementById('uploadSelected');
 
     if (targ.nodeName === 'IMG') {
         if (targ.className === 'selected') {
@@ -139,7 +126,7 @@ function loadPhotos() {
 function load() {
     loadPhotos();
     touchclick(document.getElementById('inventory'), selectPhoto);
-    document.getElementById('upload').onclick = upload;
+    document.getElementById('uploadSelected').onclick = upload;
 }
 
 window.onload = load;
