--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 </section>
 
 <section id="links">
-<h3>Stacy Leasure-Broski</h3>
+<h3>Stacy Leasure</h3>
 <p id="swiftorder"><a href="https://mygallery.swiftorder.io/Stacy.Leasure"><i class="fa">S</i>Shop Now!</a></p>
-<p id="facebook"><a href="https://www.facebook.com/groups/lularoestacyleasure/"><i class="fa fa-facebook"></i>LuLaRoe Stacy Leasure-Broski</a></p>
+<p id="facebook"><a href="https://www.facebook.com/groups/lularoestacyleasure/"><i class="fa fa-facebook"></i>LuLaRoe Stacy Leasure</a></p>
 <p id="periscope"><a href="https://www.periscope.tv/"><i class="fa fa-map-marker"></i>LuLaLeasureTime</a></p>
 <p id="instagram"><a href="https://www.instagram.com/lulaleasuretime/"><i class="fa fa-instagram"></i>lularoestacyleasure</a></p>
 <p id="email"><a href="mailto:lularoestacyleasure@gmail.com"><i class="fa fa-envelope-o"></i>lularoestacyleasure@gmail.com</a></p>
-<p id="youtube"><a href="https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg"><i class="fa fa-youtube"></i>LuLaRoe Stacy Leasure-Broski</a></p>
+<p id="youtube"><a href="https://www.youtube.com/channel/UCvWzazx8jw4kUy58FyqejJg"><i class="fa fa-youtube"></i>LuLaRoe Stacy Leasure</a></p>
 </section>
 
 <!--<h2>LuLaLeasure Time with <a href="mailto:lulaleasuretime@gmail.com">Stacy Leasure</a></h2>
