--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <section id="links">
 <h3>Stacy Leasure</h3>
-<p id="swiftorder"><a href="https://mygallery.swiftorder.io/Stacy.Leasure"><i class="fa">S</i>Shop Now!</a></p>
+<p id="swiftorder"><a href="https://mygallery.swiftorder.io/Stacy.Leasure"><i class="fa fa-shopping-cart"></i>Shop Now!</a></p>
 <p id="facebook"><a href="https://www.facebook.com/groups/lularoestacyleasure/"><i class="fa fa-facebook"></i>LuLaRoe Stacy Leasure</a></p>
 <p id="periscope"><a href="https://www.periscope.tv/"><i class="fa fa-map-marker"></i>LuLaLeasureTime</a></p>
 <p id="instagram"><a href="https://www.instagram.com/lulaleasuretime/"><i class="fa fa-instagram"></i>lularoestacyleasure</a></p>
