--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <header>
 <h2><img src="/inc/LuLaRoe.png" alt="LuLaRoe"></h2>
+<p><a href="https://www.gofundme.com/fpzyb-baby-harpers-medical-fund">Donate to Baby Harper's Medical Fund</p></p>
 </header>
 
 <article>
