home page updates

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
 
 <header>
 <h2><img src="/inc/LuLaRoe.png" alt="LuLaRoe"></h2>
-<h3 style="text-align: center; "><a href="https://www.gofundme.com/fpzyb-baby-harpers-medical-fund">Donate to Baby Harper's Medical Fund</a></h3>
 </header>
 
 <article>
 
 <section>
-<img src="/inc/lularoe_stacy.jpg" alt="">
+<img src="/inc/lularoe_stacy2.jpg" alt="">
 </section>
 
 <section id="links">
 <h3>Stacy Leasure</h3>
-<p id="swiftorder"><a href="https://mygallery.swiftorder.io/Stacy.Leasure"><i class="fa fa-shopping-cart"></i>Shop Now!</a></p>
+<p id="swiftorder"><a href="https://shoptheroe.com/party/90028390p/"><i class="fa fa-shopping-cart"></i>Shop Now!</a></p>
 <p id="facebook"><a href="https://www.facebook.com/groups/lularoestacyleasure/"><i class="fa fa-facebook"></i>LuLaRoe Stacy Leasure</a></p>
 <p id="periscope"><a href="https://www.periscope.tv/"><i class="fa fa-map-marker"></i>LuLaLeasureTime</a></p>
 <p id="instagram"><a href="https://www.instagram.com/lulaleasuretime/"><i class="fa fa-instagram"></i>lularoestacyleasure</a></p>
